[gd_scene load_steps=2 format=3 uid="uid://ctlvqyb5ouflr"]

[ext_resource type="Script" path="res://scenes/game/systems/StagesTimer.gd" id="1_plyk1"]

[node name="StagesTimer" type="Node"]
script = ExtResource("1_plyk1")

[node name="SubStageTimer" type="Timer" parent="."]

[connection signal="timeout" from="SubStageTimer" to="." method="_on_sub_stage_timer_timeout"]
